--- a/html/index.html
+++ b/html/index.html
@@ -6,8 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Morgan Lundgren">
 	<title>porjusgk</title>
-	<link rel="stylesheet" href="../assets/assets.css">
-	</link>
+	<link rel="stylesheet" href="../assets/assets.css"></link>
 </head>
 
 <body>
@@ -20,7 +19,7 @@
 				<a href="">Sök</a>
 			</div>
 			<div class="navcontainer">
-				<div class="logocontainer"><img height="70 px" width="70px" src="../assets/img/rund logga.png">
+				<div class="logocontainer"><img height="70px" width="70px" src="../assets/img/rund logga.png" alt=" Bild på logga">
 					<h1>Porjus Golfklubb</h1>
 				</div>
 				<div class="menu-icon" onclick="toggleMenu()">☰</div>
@@ -57,12 +56,12 @@
 	<section class="golf-section">
 		<div class="golf-container">
 			<div class="golf-item">
-				<img src="../assets/img/golf gubbe.png" class="golf-icon">
+				<img src="../assets/img/golf gubbe.png"class="golf-icon" alt=" Ikon av en golfspelare">
 				<h2>Boka starttid</h2>
 				<p><a href="../html/starttid.html">Se lediga tider och boka →</a></p>
 			</div>
 			<div class="golf-item">
-				<img src="../assets/img/golf sybol.png" class="golf-icon">
+				<img src="../assets/img/golf sybol.png" class="golf-icon" alt="Ikon på en krans">
 				<h2>Tävlingskalender</h2>
 				<p><a href="../html/tävling.html">Se tävlingskalendern →</a></p>
 			</div>
