ändrade ett felaktigt filnamn på en bild

--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Morgan Lundgren">
 	<title>porjusgk</title>
-	<link rel="stylesheet" href="../assets/assets.css"></link>
+	<link rel="stylesheet" href="../assets/assets.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
 				<a href="">Sök</a>
 			</div>
 			<div class="navcontainer">
-				<div class="logocontainer"><img height="70px" width="70px" src="../assets/img/rund logga.png" alt=" Bild på logga">
+				<div class="logocontainer"><img height="70" width="70" src="../assets/img/rundlogga.png" alt=" Bild på logga">
 					<h1>Porjus Golfklubb</h1>
 				</div>
 				<div class="menu-icon" onclick="toggleMenu()">☰</div>
@@ -56,7 +56,7 @@
 	<section class="golf-section">
 		<div class="golf-container">
 			<div class="golf-item">
-				<img src="../assets/img/golf gubbe.png"class="golf-icon" alt=" Ikon av en golfspelare">
+				<img src="../assets/img/golf gubbe.png" class="golf-icon" alt=" Ikon av en golfspelare">
 				<h2>Boka starttid</h2>
 				<p><a href="../html/starttid.html">Se lediga tider och boka →</a></p>
 			</div>
@@ -120,7 +120,7 @@
 		<div class="footer-container">
 			<!-- Sektion 1: Logga -->
 			<div class="footer-section">
-				<img height="100 px" width="100px " src="../assets/img/rund logga.png ">
+				<img height="100 px" width="100px " src="../assets/img/rundlogga.png ">
 			</div>
 
 			<!-- Sektion 2: Kontaktinformation -->
