la till en alt på alla bilder

--- a/html/index.html
+++ b/html/index.html
@@ -37,7 +37,7 @@
 		</nav>
 	</header>
 
-	<main></main>
+<main>
 	<section class="video-container">
 		<video class="background-video" autoplay muted loop>
 			<source src="../assets/img/6573613-hd_1920_1080_30fps.mp4" type="video/mp4">
@@ -81,37 +81,37 @@
 		</div>
 	</section>
 
-	</section> <!-- Här slutar golf-sektionen -->
+	 
 
 	<!-- Samarbetspartners-sektionen -->
 	<div class="carousel-container">
 		<h1>Våra samarbetspartners</h1>
 
 		<div class="carousel">
-			<img src="../assets/img/Med_stod_fran_Allmanna_Arvsfonden_farg_positiv-624x151.png">
-			<img src="../assets/img/nedladdning (1).jpg">
-			<img src="../assets/img/nedladdning.jpg">
-			<img src="../assets/img/nedladdning.png">
-			<img src="../assets/img/teamsportia.png">
+			<img src="../assets/img/Med_stod_fran_Allmanna_Arvsfonden_farg_positiv-624x151.png" alt="logga på företag">
+			<img src="../assets/img/nedladdning (1).jpg" alt="logga på företag">
+			<img src="../assets/img/nedladdning.jpg" alt="logga på företag">
+			<img src="../assets/img/nedladdning.png" alt="logga på företag">
+			<img src="../assets/img/teamsportia.png" alt="logga på företag">
 
-			<img src="../assets/img/Med_stod_fran_Allmanna_Arvsfonden_farg_positiv-624x151.png">
-			<img src="../assets/img/nedladdning (1).jpg">
-			<img src="../assets/img/nedladdning.jpg">
-			<img src="../assets/img/nedladdning.png">
-			<img src="../assets/img/teamsportia.png">
+			<img src="../assets/img/Med_stod_fran_Allmanna_Arvsfonden_farg_positiv-624x151.png" alt="logga på företag">
+			<img src="../assets/img/nedladdning (1).jpg" alt="logga på företag">
+			<img src="../assets/img/nedladdning.jpg" alt="logga på företag">
+			<img src="../assets/img/nedladdning.png" alt="logga på företag">
+			<img src="../assets/img/teamsportia.png" alt="logga på företag">
 
-			<img src="../assets/img/Med_stod_fran_Allmanna_Arvsfonden_farg_positiv-624x151.png">
-			<img src="../assets/img/nedladdning (1).jpg">
-			<img src="../assets/img/nedladdning.jpg">
-			<img src="../assets/img/nedladdning.png">
-			<img src="../assets/img/teamsportia.png">
+			<img src="../assets/img/Med_stod_fran_Allmanna_Arvsfonden_farg_positiv-624x151.png" alt="logga på företag">
+			<img src="../assets/img/nedladdning (1).jpg" alt="logga på företag">
+			<img src="../assets/img/nedladdning.jpg" alt="logga på företag">
+			<img src="../assets/img/nedladdning.png" alt="logga på företag">
+			<img src="../assets/img/teamsportia.png" alt="logga på företag">
 
 		</div>
 
 	</div>
 
 
-	</main>
+</main>	
 
 
 
@@ -120,7 +120,7 @@
 		<div class="footer-container">
 			<!-- Sektion 1: Logga -->
 			<div class="footer-section">
-				<img height="100 px" width="100px " src="../assets/img/rundlogga.png ">
+				<img height="100" width="100" src="../assets/img/rundlogga.png " alt="bild på logga ">
 			</div>
 
 			<!-- Sektion 2: Kontaktinformation -->
