--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -78,21 +78,23 @@
 		<h1>Våra samarbetspartners</h1>
 
 		<div class="carousel">
-			<img src="../assets/img/Med_stod_fran_Allmanna_Arvsfonden_farg_positiv-624x151.png">
-			<img src="../assets/img/nedladdning (1).jpg">
-			<img src="../assets/img/nedladdning.jpg">
-			<img src="../assets/img/nedladdning.png">
-			<img src="../assets/img/teamsportia.png">
-			<img src="../assets/img/Med_stod_fran_Allmanna_Arvsfonden_farg_positiv-624x151.png">
-			<img src="../assets/img/nedladdning (1).jpg">
-			<img src="../assets/img/nedladdning.jpg">
-			<img src="../assets/img/nedladdning.png">
-			<img src="../assets/img/teamsportia.png">
-			<img src="../assets/img/Med_stod_fran_Allmanna_Arvsfonden_farg_positiv-624x151.png">
-			<img src="../assets/img/nedladdning (1).jpg">
-			<img src="../assets/img/nedladdning.jpg">
-			<img src="../assets/img/nedladdning.png">
-			<img src="../assets/img/teamsportia.png">
+			<img src="../assets/img/Med_stod_fran_Allmanna_Arvsfonden_farg_positiv-624x151.png" alt="logga på företag">
+			<img src="../assets/img/nedladdning (1).jpg" alt="logga på företag">
+			<img src="../assets/img/nedladdning.jpg" alt="logga på företag">
+			<img src="../assets/img/nedladdning.png" alt="logga på företag">
+			<img src="../assets/img/teamsportia.png" alt="logga på företag">
+
+			<img src="../assets/img/Med_stod_fran_Allmanna_Arvsfonden_farg_positiv-624x151.png" alt="logga på företag">
+			<img src="../assets/img/nedladdning (1).jpg" alt="logga på företag">
+			<img src="../assets/img/nedladdning.jpg" alt="logga på företag">
+			<img src="../assets/img/nedladdning.png" alt="logga på företag">
+			<img src="../assets/img/teamsportia.png" alt="logga på företag">
+
+			<img src="../assets/img/Med_stod_fran_Allmanna_Arvsfonden_farg_positiv-624x151.png" alt="logga på företag">
+			<img src="../assets/img/nedladdning (1).jpg" alt="logga på företag">
+			<img src="../assets/img/nedladdning.jpg" alt="logga på företag">
+			<img src="../assets/img/nedladdning.png" alt="logga på företag">
+			<img src="../assets/img/teamsportia.png" alt="logga på företag">
 
 		</div>
 
