la till alt och tog bort px från bilder

--- a/html/historia.html
+++ b/html/historia.html
@@ -7,8 +7,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="../assets/assets.css">
 </head>
-</link>
-</head>
+
 
 <body>
 
@@ -19,7 +18,7 @@
 			<a href="">Sök</a>
 		</div>
 		<div class="navcontainer">
-			<div class="logocontainer"><img height="70 px" width="70" src="../assets/img/rundlogga.png">
+			<div class="logocontainer"><img height="70" width="70" src="../assets/img/rundlogga.png" alt="bild på logga">
 				<h1>
 					<a href="../html/index.html">Porjus Golfklubb</a>
 				</h1>
@@ -155,7 +154,7 @@
 		<div class="footer-container">
 			<!-- Sektion 1: Logga -->
 			<div class="footer-section">
-				<img height="100 px" width="100 px" src="../assets/img/rundlogga.png ">
+				<img height="100" width="100" src="../assets/img/rundlogga.png " alt="bild på logga">
 			</div>
 
 			<!-- Sektion 2: Kontaktinformation -->
