--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -17,7 +17,7 @@
 			<a href="">Sök</a>
 		</div>
 		<div class="navcontainer">
-			<div class="logocontainer"><img height="70 px" width="70" src="../assets/img/rundlogga.png">
+			<div class="logocontainer"><img height="70" width="70" src="../assets/img/rundlogga.png" alt="bild på logga">
 				<h1>
 					<a href="../html/index.html">Porjus Golfklubb</a>
 				</h1>
@@ -105,7 +105,7 @@
 		<div class="footer-container">
 			<!-- Sektion 1: Logga -->
 			<div class="footer-section">
-				<img height="100 px" width="100 px" src="../assets/img/rundlogga.png">
+				<img height="100" width="100" src="../assets/img/rundlogga.png" alt="bild på logga">
 			</div>
 
 			<!-- Sektion 2: Kontaktinformation -->
@@ -134,8 +134,6 @@
 			</div>
 		</div>
 	</footer>
-
-
 
 </body>
 
