--- a/html/starttid.html
+++ b/html/starttid.html
@@ -35,7 +35,7 @@
 	</nav>
 
 	<section class="starttid-picture">
-		<img src="../assets/img/pexels-huzaimi-ismail-839741383-30679405.jpg">
+		<img src="../assets/img/pexels-huzaimi-ismail-839741383-30679405.jpg" alt="bakgrundsbild">
 		<div class="picture-text">
 			<h1>Boka starttid</h1>
 		</div>
