--- a/html/tävling.html
+++ b/html/tävling.html
@@ -17,7 +17,7 @@
 			<a href="">Sök</a>
 		</div>
 		<div class="navcontainer">
-			<div class="logocontainer"><img height="70 px" width="70" src="../assets/img/rundlogga.png">
+			<div class="logocontainer"><img height="70" width="70" src="../assets/img/rundlogga.png" alt="bild på logga">
 				<h1>
 					<a href="../html/index.html">Porjus Golfklubb</a>
 				</h1>
@@ -35,7 +35,7 @@
 	</nav>
 
 	<section class="tävling-picture">
-		<img src="../assets/img/pexels-picjumbo-com-55570-196650.jpg">
+		<img src="../assets/img/pexels-picjumbo-com-55570-196650.jpg" alt="bakgrundsbild">
 		<div class="picture-text">
 			<h1>Tävlingskalender</h1>
 		</div>
@@ -113,7 +113,7 @@
 		<div class="footer-container">
 			<!-- Sektion 1: Logga -->
 			<div class="footer-section">
-				<img height="100 px" width="100 px" src="../assets/img/rundlogga.png ">
+				<img height="100" width="100" src="../assets/img/rundlogga.png " alt="bild på logga">
 			</div>
 
 			<!-- Sektion 2: Kontaktinformation -->
