--- a/html/index.html
+++ b/html/index.html
@@ -61,7 +61,7 @@
 				<p><a href="../html/starttid.html">Se lediga tider och boka →</a></p>
 			</div>
 			<div class="golf-item">
-				<img src="../assets/img/golfsybol.png" class="golf-icon" alt="Ikon på en krans">
+				<img src="../assets/img/golfsymbol.png" class="golf-icon" alt="Ikon på en krans">
 				<h2>Tävlingskalender</h2>
 				<p><a href="../html/tävling.html">Se tävlingskalendern →</a></p>
 			</div>
