--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
 				<div class="navtext">
 
 					<a href="">Klubben <span class="arrow">▼</span></a>
-					<a href="">Gäster <span class="arrow">▼</span></a>
+					<a href="../html/gaser.html">Gäster <span class="arrow">▼</span></a>
 					<a href="../html/medlemskap.html">Medlemskap <span class="arrow">▼</span></a>
 					<a href="../html/historia.html">Historia <span class="arrow">▼</span></a>
 
