gjorde om min footer till en list atill

--- a/html/historia.html
+++ b/html/historia.html
@@ -154,32 +154,38 @@
 		<div class="footer-container">
 			<!-- Sektion 1: Logga -->
 			<div class="footer-section">
-				<img height="100" width="100" src="../assets/img/rundlogga.png " alt="bild på logga">
+				<img height="100" width="100" src="../assets/img/rundlogga.png " alt="bild på logga ">
 			</div>
 
 			<!-- Sektion 2: Kontaktinformation -->
 			<div class="footer-section">
 				<h4>Kontaktinformation</h4>
-				<p>Porjus Golfklubb</p>
-				<p>Hantverkargatan 39 C</p>
-				<p>962 33 Jokkmokk</p>
-				<p>070-395 44 05</p>
-				<p><a href="mailto:info@porjusgk.com">info@porjusgk.com</a></p>
+				<ul>
+					<li>Porjus Golfklubb</li>
+					<li>Hantverkargatan 39 C</li>
+					<li>962 33 Jokkmokk</li>
+					<li>070-395 44 05</li>
+					<li><a href="mailto:info@porjusgk.com">info@porjusgk.com</a></i>
+				</ul>
 			</div>
 
 			<!-- Sektion 3: Spela -->
 			<div class="footer-section">
 				<h4>Spela</h4>
-				<p><a href="#">Boka starttid</a></p>
-				<p><a href="#">Banguide</a></p>
-				<p><a href="#">Trivselregler</a></p>
+				<ul>
+					<li><a href="#">Boka starttid</a></li>
+					<li><a href="#">Banguide</a></li>
+					<li><a href="#">Trivselregler</a></li>
+				</ul>
 			</div>
 
 			<!-- Sektion 4: Medlemskap -->
 			<div class="footer-section">
 				<h4>Medlemskap</h4>
-				<p><a href="#">Börja spela golf</a></p>
-				<p><a href="#">Bli medlem</a></p>
+				<ul>
+					<li><a href="#">Börja spela golf</a></li>
+					<li><a href="../html/medlemskap.html">Bli medlem</a></li>
+				</ul>
 			</div>
 		</div>
 	</footer>
