--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,8 @@
 				<a href="">Sök</a>
 			</div>
 			<div class="navcontainer">
-				<div class="logocontainer"><img height="70" width="70" src="../assets/img/rundlogga.png" alt=" Bild på logga">
+				<div class="logocontainer"><img height="70" width="70" src="../assets/img/rundlogga.png"
+						alt=" Bild på logga">
 					<h1>Porjus Golfklubb</h1>
 				</div>
 				<div class="menu-icon" onclick="toggleMenu()">☰</div>
@@ -37,81 +38,85 @@
 		</nav>
 	</header>
 
-<main>
-	<section class="video-container">
-		<video class="background-video" autoplay muted loop>
-			<source src="../assets/img/6573613-hd_1920_1080_30fps.mp4" type="video/mp4">
+	<main>
+		<section class="video-container">
+			<video class="background-video" autoplay muted loop>
+				<source src="../assets/img/6573613-hd_1920_1080_30fps.mp4" type="video/mp4">
 
-		</video>
-		<div class="video-overlay"></div>
-		<div class="video-text">
-			<h1>En oförglömlig golfupplevelse</h1>
-			<a>Välkommen till Porjus Golfklubb</a>
-		</div>
-	</section>
-
-	<div class="spacer"></div>
-
-
-	<section class="golf-section">
-		<div class="golf-container">
-			<div class="golf-item">
-				<img src="../assets/img/golfgubbe.png" class="golf-icon" alt=" Ikon av en golfspelare">
-				<h2>Boka starttid</h2>
-				<p><a href="../html/starttid.html">Se lediga tider och boka →</a></p>
+			</video>
+			<div class="video-overlay"></div>
+			<div class="video-text">
+				<h1>En oförglömlig golfupplevelse</h1>
+				<a>Välkommen till Porjus Golfklubb</a>
 			</div>
-			<div class="golf-item">
-				<img src="../assets/img/golfsymbol.png" class="golf-icon" alt="Ikon på en krans">
-				<h2>Tävlingskalender</h2>
-				<p><a href="../html/tävling.html">Se tävlingskalendern →</a></p>
+		</section>
+
+		<div class="spacer"></div>
+
+
+		<section class="golf-section">
+			<div class="golf-container">
+				<div class="golf-item">
+					<img src="../assets/img/golfgubbe.png" class="golf-icon" alt=" Ikon av en golfspelare">
+					<h2>Boka starttid</h2>
+					<p><a href="../html/starttid.html">Se lediga tider och boka →</a></p>
+				</div>
+				<div class="golf-item">
+					<img src="../assets/img/golfsymbol.png" class="golf-icon" alt="Ikon på en krans">
+					<h2>Tävlingskalender</h2>
+					<p><a href="../html/tävling.html">Se tävlingskalendern →</a></p>
+				</div>
 			</div>
+
+			<div class="golf-highlight">
+				<div class="golf-highlight-text">
+					<h2>Börja spela golf</h2>
+					<p>Ta grönt kort hos oss</p>
+					<p>Anmäl dig redan idag till en grönt kort kurs hos oss. Efter avslutad kurs får du fritt spel på
+						banan
+						hela säsongen!</p>
+					<button class="golf-button">Läs mer</button>
+				</div>
+				<div class="golf-highlight-image">
+					<img src="../assets/img/pexels-thomasleeward-2828723.jpg" alt="Golfboll nära hålet">
+				</div>
+			</div>
+		</section>
+
+
+
+		<!-- Samarbetspartners-sektionen -->
+		<div class="carousel-container">
+			<h1>Våra samarbetspartners</h1>
+
+			<div class="carousel">
+				<img src="../assets/img/Med_stod_fran_Allmanna_Arvsfonden_farg_positiv-624x151.png"
+					alt="logga på företag">
+				<img src="../assets/img/nedladdning(1).jpg" alt="logga på företag">
+				<img src="../assets/img/nedladdning.jpg" alt="logga på företag">
+				<img src="../assets/img/nedladdning.png" alt="logga på företag">
+				<img src="../assets/img/teamsportia.png" alt="logga på företag">
+
+				<img src="../assets/img/Med_stod_fran_Allmanna_Arvsfonden_farg_positiv-624x151.png"
+					alt="logga på företag">
+				<img src="../assets/img/nedladdning(1).jpg" alt="logga på företag">
+				<img src="../assets/img/nedladdning.jpg" alt="logga på företag">
+				<img src="../assets/img/nedladdning.png" alt="logga på företag">
+				<img src="../assets/img/teamsportia.png" alt="logga på företag">
+
+				<img src="../assets/img/Med_stod_fran_Allmanna_Arvsfonden_farg_positiv-624x151.png"
+					alt="logga på företag">
+				<img src="../assets/img/nedladdning(1).jpg" alt="logga på företag">
+				<img src="../assets/img/nedladdning.jpg" alt="logga på företag">
+				<img src="../assets/img/nedladdning.png" alt="logga på företag">
+				<img src="../assets/img/teamsportia.png" alt="logga på företag">
+
+			</div>
+
 		</div>
 
-		<div class="golf-highlight">
-			<div class="golf-highlight-text">
-				<h2>Börja spela golf</h2>
-				<p>Ta grönt kort hos oss</p>
-				<p>Anmäl dig redan idag till en grönt kort kurs hos oss. Efter avslutad kurs får du fritt spel på banan
-					hela säsongen!</p>
-				<button class="golf-button">Läs mer</button>
-			</div>
-			<div class="golf-highlight-image">
-				<img src="../assets/img/pexels-thomasleeward-2828723.jpg" alt="Golfboll nära hålet">
-			</div>
-		</div>
-	</section>
 
-	 
-
-	<!-- Samarbetspartners-sektionen -->
-	<div class="carousel-container">
-		<h1>Våra samarbetspartners</h1>
-
-		<div class="carousel">
-			<img src="../assets/img/Med_stod_fran_Allmanna_Arvsfonden_farg_positiv-624x151.png" alt="logga på företag">
-			<img src="../assets/img/nedladdning(1).jpg" alt="logga på företag">
-			<img src="../assets/img/nedladdning.jpg" alt="logga på företag">
-			<img src="../assets/img/nedladdning.png" alt="logga på företag">
-			<img src="../assets/img/teamsportia.png" alt="logga på företag">
-
-			<img src="../assets/img/Med_stod_fran_Allmanna_Arvsfonden_farg_positiv-624x151.png" alt="logga på företag">
-			<img src="../assets/img/nedladdning(1).jpg" alt="logga på företag">
-			<img src="../assets/img/nedladdning.jpg" alt="logga på företag">
-			<img src="../assets/img/nedladdning.png" alt="logga på företag">
-			<img src="../assets/img/teamsportia.png" alt="logga på företag">
-
-			<img src="../assets/img/Med_stod_fran_Allmanna_Arvsfonden_farg_positiv-624x151.png" alt="logga på företag">
-			<img src="../assets/img/nedladdning(1).jpg" alt="logga på företag">
-			<img src="../assets/img/nedladdning.jpg" alt="logga på företag">
-			<img src="../assets/img/nedladdning.png" alt="logga på företag">
-			<img src="../assets/img/teamsportia.png" alt="logga på företag">
-
-		</div>
-
-	</div>
-
-
-</main>	
+	</main>
 
 
 
@@ -126,26 +131,32 @@
 			<!-- Sektion 2: Kontaktinformation -->
 			<div class="footer-section">
 				<h4>Kontaktinformation</h4>
-				<p>Porjus Golfklubb</p>
-				<p>Hantverkargatan 39 C</p>
-				<p>962 33 Jokkmokk</p>
-				<p>070-395 44 05</p>
-				<p><a href="mailto:info@porjusgk.com">info@porjusgk.com</a></p>
+				<ul>
+					<li>Porjus Golfklubb</li>
+					<li>Hantverkargatan 39 C</li>
+					<li>962 33 Jokkmokk</li>
+					<li>070-395 44 05</li>
+					<li><a href="mailto:info@porjusgk.com">info@porjusgk.com</a></i>
+				</ul>
 			</div>
 
 			<!-- Sektion 3: Spela -->
 			<div class="footer-section">
 				<h4>Spela</h4>
-				<p><a href="#">Boka starttid</a></p>
-				<p><a href="#">Banguide</a></p>
-				<p><a href="#">Trivselregler</a></p>
+				<ul>
+					<li><a href="#">Boka starttid</a></li>
+					<li><a href="#">Banguide</a></li>
+					<li><a href="#">Trivselregler</a></li>
+				</ul>
 			</div>
 
 			<!-- Sektion 4: Medlemskap -->
 			<div class="footer-section">
 				<h4>Medlemskap</h4>
-				<p><a href="#">Börja spela golf</a></p>
-				<p><a href="../html/medlemskap.html">Bli medlem</a></p>
+				<ul>
+					<li><a href="#">Börja spela golf</a></li>
+					<li><a href="../html/medlemskap.html">Bli medlem</a></li>
+				</ul>
 			</div>
 		</div>
 	</footer>
